--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,7 +44,8 @@ test:
         and not test_icc \
         and not test_item1_elf \
         and not test_code_is_black_clean \
-        and not ocaml
+        and not ocaml \
+        and not ignore_readelf_errors_differences
       "
 
 about:
