add test dependency on file to match installed libmagic

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,12 +30,13 @@ test:
   source_files:
     - tests
   requires:
-    - pytest
+    - file
     - pip
+    - pytest
   imports:
     - diffoscope
   commands:
-    - pip check
+    - python -m pip check
     - diffoscope --help
     - diffoscope --list-tools
     - diffoscope --version
