--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -85,6 +85,7 @@ outputs:
         - openjdk
         - openssh
         - pdfminer
+        - poppler
         - postgresql
         - progressbar
         - pycryptodome
