--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -88,7 +88,7 @@ outputs:
         - postgresql
         - progressbar
         - pycryptodome
-        - pypdf2
+        - pypdf2 <1.28.0
         - python-debian
         - python-tlsh
         - r
