--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -75,6 +75,7 @@ outputs:
         - gnupg
         - h5py
         - hdf5
+        - html2text
         - imagemagick
         - jsondiff
         - libdb
