update pypdf dep

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -89,7 +89,7 @@ outputs:
         - postgresql
         - progressbar
         - pycryptodome
-        - pypdf2 <1.28.0
+        - pypdf
         - python-debian
         - python-tlsh
         - r
