--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -63,6 +63,7 @@ outputs:
         - {{ pin_subpackage("diffoscope") }}
         - argcomplete
         - binutils
+        - binwalk
         - bzip2
         - cctools
         - defusedxml
