--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -113,18 +113,17 @@ outputs:
         - file
         - pytest
         # test extras
-        - pytest-cov
+        - coverage
       commands:
         - python -m pip check
         - diffoscope --list-missing-tools
         - |-
-          pytest -vv \
+          coverage run -m \
+            --source=diffoscope \
+            --branch \
+            pytest -vv \
             --tb=long \
-            --cov=diffoscope \
-            --cov-report=term-missing \
-            --cov-report=term:skip-covered \
-            --cov-fail-under=76 \
-            --no-cov-on-fail \
+            --color=yes \
             -k="not ( \
               assert_non_existing or \
               test_berkeley_db or \
@@ -139,6 +138,7 @@ outputs:
               (test_pdf and test_no_differences) or \
               (test_html and test_diff) \
             )"
+          - coverage report --show-missing --skip-covered --fail-under=75
 
 about:
   home: https://diffoscope.org
